--- a/config.template
+++ b/config.template
@@ -44,13 +44,13 @@ http {
     }
 
     {{range $name := $names}}
-    upstream {{$name}} {
+    upstream {{$name}}-{{$port}} {
       least_conn;
       server {{$name}}:{{$port}};
     }
     server {
       listen {{$port}};
-      server_name {{$name}};
+      server_name {{$name}}-{{$port}};
       client_max_body_size 10m;
       location / {
         proxy_pass http://{{$name}};
